# web_demo_python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: bandit.yaml  black.yaml  coveralls.yaml  isort.yaml  mypy.yaml  pytest.yaml  radon.yaml  ruff.yaml
django_project/core/: asgi.py  settings.py  views.py  wsgi.py
django_project/core/templates/: base.htm
django_project/core/templates/core/custom/: dashboard.html
django_project/core/templates/core/navigation/: rest_api.htm
django_project/core/urls/: __init__.py  rest.py  urls.py
django_project/main_app/: admin.py  apps.py  filtersets.py  forms.py  models.py  serializers.py  signals.py
django_project/main_app/forms/: filter_forms copy.py  filter_forms.py
django_project/main_app/management/commands/: generate_data.py
django_project/main_app/migrations/: 0001_initial.py
django_project/main_app/templates/main_app/custom/: dashboard.html
django_project/main_app/templates/main_app/detail/: _example.html
django_project/main_app/templates/main_app/navigation/: data.htm  report.htm
django_project/main_app/templates/main_app/table/: _example.htm  eventplatforms.htm  events.htm  memberinterests.htm  memberlinks.htm  members.htm  memberskills.htm  skilllevels.htm  techgrouplinks.htm  techgroups.htm  technicalareas.htm
django_project/main_app/urls/: __init__.py  gui.py  list.py  rest.py
django_project/main_app/views/: gui.py  list.py  report.py  rest.py
envs/: .env.template
