[project]
dependencies = [
    "django",
    "django-auditlog==2.2.0",
    "django-braces",
    "django-debug-toolbar",
    "django-environ",
    "django-extensions",
    "django-filter",
    "django-handyhelpers",
    "django-hostutils",
    "django-userextensions",
    "django-pygwalker",
    "django-signalcontrol",
    "djangorestframework",
    "djangorestframework-filters==1.0.0.dev0",
    "drf-flex-fields",
    "drf-spectacular",
    "drf-renderer-xlsx",
]
description = "django project created from djangoaddicts django_project_template"
dynamic = ["version"]
keywords = ["django"]
license = {file = "LICENSE"}
name = "web_demo_python"
readme = "README.md"
requires-python = ">=3.8"


[project.optional-dependencies]
dev = [
    "coveralls",
    "bandit",
    "black",
    "faker",
    "isort",
    "model-bakery",
    "mypy",
    "mypy-extensions",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-django",
    "radon",
    "safety",
    "types-python-dateutil",
    "typing_extensions",
]


[tool.bandit]
exclude_dirs = ["venv", "django_project/tests"]


[tool.black]
line-length = 120


[tool.coverage.report]
show_missing = true


[tool.coverage.run]
branch = true
source = ["django_project"]
omit = [
    "django_project/manage.py", 
    "django_project/core/asgi.py",
    "django_project/core/wsgi.py", 
    "django_project/*/scripts/*",
    "django_project/tests/*", 
    ]


[tool.isort]
profile = "black"


[tool.mypy]
exclude = ['venv/*']
ignore_missing_imports = true


[tool.ruff]
line-length = 120
exclude = ["django_project/manage.py", "django_project/tests", "django_project/*/migrations", "django_project/*/scripts", "django_project/*/local_test"]


[tool.setuptools.packages.find]
where = ["."]
include = ["django_project"]
exclude = []
namespaces = false
